# nattukaka

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  database.sh  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  index.html  init.sh  loki-config.yaml  main.go  nginx.conf  nginx.sh  observability.sh  prometheus.yml
app/: app.go  auth.go  home.go  instance_type.go  routes.go  service.go  volume.go  workspace.go
cache/: cache.go  cache_test.go
config/: config.go
controllers/: controllers.go
database/: database.go  database_test.go  implementation.go  implementation_test.go  instance_type.go  schema.sql  service.go  user.go  volume.go  workspace.go
docs/: DESIGN.md  TODO.md
entity/: log.go  note.go  post.go  todo.go  user.go
httpkaka/: 404.go  content_type.go  health.go  markdown.go  note.go  notepad.go  response.go  routes.go  server.go  static.go  todo.go  types.go  user.go
joystick/: .env.example  Makefile  go.mod  go.sum  main.go
player/: Makefile  go.mod  go.sum  main.go
repository/: main.go
scripts/: backup.sh  collectstat.sh  crontab  graph.py  process_logs.sh  report.sh  rotate_keys.sh  schema.sql  setup.sh  startup.sh  systemd
server/: 404.go  content_type.go  health.go  markdown.go  note.go  notepad.go  response.go  routes.go  server.go  static.go  todo.go  types.go  user.go
service/: auth.go  errors.go  index.go  instance_type.go  markdown.go  note.go  redis_keys.go  service.go  todo.go  user.go  volume.go  workspace.go
shared/: context.go
src/: lib.rs  main.rs
static/: index.html
(+106 files in other folders)
