[package]
name = "nattukaka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
redis = "0.28.1"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.136"
tokio = { version = "1.41.0", features = ["full"] }
